--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -203,4 +203,7 @@
     <bool name="config_bluetooth_wide_band_speech">false</bool>
 
     <bool name="config_ui_enableFadingMarquee">false</bool>
+
+  <!-- Disable lockscreen translucent decor by default -->
+    <bool name="config_enableLockScreenTranslucentDecor">true</bool>
 </resources>
